--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ service:
   - docker
 
 before_install:
- - docker build -t farizbenchaoui/docker-react -f dockerfile.dev .
+ - docker build -t farizbenchaoui/docker-react -f Dockerfile.dev .
 
 script:
  - docker run farizbenchaoui/docker-react npm run test -- --coverage
