added exit test command

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
  - docker build -t farizbenchaoui/docker-react -f Dockerfile.dev .
 
 script:
- - docker run farizbenchaoui/docker-react npm run test -- --coverage
+ - docker run -e CI=true farizbenchaoui/docker-react npm run test 
 
 
