--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,14 @@ script:
  - docker run -e CI=true farizbenchaoui/docker-react npm run test 
 
 
+deploy:
+ provider: elasticbeanstalk
+ region: "us-east-2"
+ app: "docker-react"
+ env: "DockerReact-env"
+ bucket_name: "elasticbeanstalk-us-east-2-103070048470"
+ bucket_path: "docker-react"
+ on:
+    branch: master
+ access_key_id: $AWS_ACCESS_KEY
+ secret_access_key: $AWS_SECRET_KEY
